work in progress

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
     "tailwind": "^4.0.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "typecheck": "^0.1.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250224.0",
