--- a/worker/package.json
+++ b/worker/package.json
@@ -2,7 +2,8 @@
   "name": "trademe-tracker-worker",
   "version": "1.0.0",
   "description": "Cloudflare Worker for TradeMe Tracker",
-  "main": "src/index.js",
+  "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
